# sdchat

./: .gitignore  CMakeLists.txt  README.md  icon.qrc  images.qrc  logindialog.ui  main.cpp  mainwindow.h  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  setRedisVarify.bat  startRedis.bat  startVarifyServer.bat
client/: CMakeLists.txt  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  singleton.h
client/style/: stylesheet.qss
server/GateServer/: CMakeLists.txt
server/GateServer/GateServer/: config.ini  message.proto
server/GateServer/GateServer/include/: AsioIOServicePool.h  CServer.h  ConfigMgr.h  HttpConnection.h  LogicSystem.h  MysqlConPool.h  MysqlDao.h  MysqlMgr.h  RedisConPool.h  RedisMgr.h  StatusGrpcClient.h  VarifyGrpcClient.h  const.h  message.grpc.pb.h
server/GateServer/GateServer/src/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlConPool.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisConPool.cpp  RedisMgr.cpp  VarifyGrpcClient.cpp  main.cpp
server/GateServer/src/: CMakeLists.txt  CServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  Singleton.h  const.h  main.cpp
server/VarifyServer/: config.ini  config.js  config.json  const.js  email.js  package-lock.json  package.json  server.js
